flux-snapshot/2023-04-20-22-53-31-exit101
    Updating crates.io index
    Checking sorting v0.1.0 (/Users/cole/scratch/flux/flux-demos/sorting)
error[E0425]: cannot find value `bigger_values` in this scope
  --> src/sort.rs:42:39
   |
42 |         SortedList::Cons(hi, Box::new(bigger_values))
   |                                       ^^^^^^^^^^^^^ not found in this scope

error[E0308]: mismatched types
  --> src/sort.rs:39:9
   |
37 | pub fn make_descending_range(hi: i32, lo: i32) -> List {
   |                                                   ---- expected `sort::List` because of return type
38 |     if hi == lo {
39 |         SortedList::Cons(hi, Box::new(SortedList::Nil))
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `List`, found `SortedList`

error[E0308]: mismatched types
  --> src/sort.rs:42:9
   |
37 | pub fn make_descending_range(hi: i32, lo: i32) -> List {
   |                                                   ---- expected `sort::List` because of return type
...
42 |         SortedList::Cons(hi, Box::new(bigger_values))
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `List`, found `SortedList`

Some errors have detailed explanations: E0308, E0425.
For more information about an error, try `rustc --explain E0308`.
error: could not compile `sorting` (bin "sorting") due to 3 previous errors
